--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "uni-halo",
-    "appid" : "__UNI__5748B6E",
+    "appid" : "__UNI__EFBFFB2",
     "description" : "uni-halo博客：基于halo开源博客系统API开发的多端博客。",
     "versionName" : "1.0.0",
     "versionCode" : 100,
@@ -119,7 +119,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wx1bb161867082c72f",
+        "appid" : "wxc1e7f5503d888778",
         "setting" : {
             "urlCheck" : false,
             "minified" : true
